[gd_scene load_steps=3 format=3 uid="uid://dwc1hnjb0rhp5"]

[ext_resource type="Script" uid="uid://2m4xc5qluom4" path="res://in_game_ui.gd" id="1_kenku"]
[ext_resource type="Script" uid="uid://b2n7jq12tyr8s" path="res://tower_purchase_menu.gd" id="2_onc8m"]

[node name="InGameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_kenku")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 156.0
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 85.0
grow_horizontal = 2

[node name="MoneyDisplay" type="Label" parent="Panel/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Money: $0"

[node name="TowerPurchaseMenu" type="VBoxContainer" parent="Panel/LeftPanel"]
layout_mode = 2
script = ExtResource("2_onc8m")

[node name="TowerHeading" type="Label" parent="Panel/LeftPanel/TowerPurchaseMenu"]
layout_mode = 2
text = "Towers"
horizontal_alignment = 1
